--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>hello world</p>
-    <p>This is a new feature</p>
+    <p>This is a new feature (Dropdown)</p>
 </body>
 </html>
